--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -24,8 +24,8 @@ jobs:
  #       restore-keys: |
  #         ${{ runner.os }}-php-
 
-    - name: Install dependencies
-      run: composer install --prefer-dist --no-progress
+ #   - name: Install dependencies
+ #     run: composer install --prefer-dist --no-progress
 
     # IP取得ライブラリをインストール
     - name: Public IP Install
